compiler/tests/should-fail/NoSelectionSolution.via
/* NoSelectionSolutionError */

host alice
host bob
host chuck
assume for <- alice trusts bob
assume for <- bob trusts alice
assume alice & bob trusts chuck

fun main() {
    val x: int@YaoABY(server = alice, client = bob) = 1;
    /* MPC(alice, bob) cannot send to chuck. */
    output x to chuck;
}
